--- a/src/app/features/goals/pages/goals/goals.page.scss
+++ b/src/app/features/goals/pages/goals/goals.page.scss
@@ -1,3 +1,26 @@
+.os-goals__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.os-goals__actions {
+  display: flex;
+  gap: 8px;
+}
+
+.os-goals__live-region {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .os-goals-page {
   padding: 1rem;
 }
